feat: organize handlers and add sys settings
